syntax = "proto3";

option go_package = ".;pb";

package pb;

message PostFormat {
	enum Enum {
		Plain = 0;
		Markdown = 1;
	}
}

message PostTag {
	repeated string tag = 1;
}
